CampingProject/force-app/main/default/objects/Camp_Visit__c/Camp_Visit__c.object-meta.xml
<CustomObject>
    <description>A stay or a future stay at a camp site</description>
    <label>Camp Visit</label>
    <nameField>
        <label>Camp Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CampVisits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>