CampingProject/force-app/main/default/objects/Camp_Visit__c/fields/CampSite__c.field-meta.xml
<CustomField>
    <fullName>CampSite__c</fullName>
    <label>CampSite</label>
    <referenceTo>CampSite__c</referenceTo>
    <relationshipLabel>CampVisits</relationshipLabel>
    <relationshipName>CampVisits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>