CampingProject/force-app/main/default/objects/Camp_Visit__c/fields/Checkin_Date__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Date__c</fullName>
    <label>Checkin Date</label>
    <type>Date</type>
</CustomField>