CampingProject/force-app/main/default/objects/Camp_Visit__c/fields/Cost_of_the_visit__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_the_visit__c</fullName>
    <description>Total cost for this visit</description>
    <inlineHelpText>Total cost for this visit</inlineHelpText>
    <label>Cost of the visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>