CampingProject/force-app/main/default/objects/Camp_Visit__c/fields/Site_Features__c.field-meta.xml
<CustomField>
    <fullName>Site_Features__c</fullName>
    <label>Site Features</label>
    <length>255</length>
    <type>Text</type>
</CustomField>